# husky_waypoint_nav

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: blank_map.pgm  blank_map.yaml  blank_map_no_column.pgm  blank_map_no_column.yaml  blank_map_scaled.pgm  blank_map_scaled.yaml  localization.yaml  nav_overrides_working.yaml  no_static_map_nav_overrides.yaml  optitrack_waypoints.txt  test_waypoints.txt  with_map_nav_overrides.yaml
config/waypoints/: optitrack_waypoints_01.txt  optitrack_waypoints_02.txt  optitrack_waypoints_03.txt  optitrack_waypoints_04.txt  optitrack_waypoints_05.txt  optitrack_waypoints_06.txt  optitrack_waypoints_07.txt  optitrack_waypoints_08.txt  optitrack_waypoints_09.txt  optitrack_waypoints_11.txt  optitrack_waypoints_13.txt  optitrack_waypoints_14.txt  optitrack_waypoints_15.txt  optitrack_waypoints_16.txt  optitrack_waypoints_17.txt
launch/: FullPDNavigator.launch  collect_nav.launch  full_pd_control.launch  husky_nav_working.launch  navigator.launch  no_map_husky_nav.launch  odom_nav.launch  p_navigator.launch  pd_navigator.launch  real_nav.launch  sim_nav.launch  start_navigator.launch  test_nav.launch  with_map_husky_nav.launch
logs/: p_nav_12_waypoint_success.csv  pd_nav_12_waypoint_success.csv
maps/: dummy_map.pgm  lab_static_map.yaml
src/: FullPDNavigator.py  collect_optitrack_waypoints.py  collect_optitrack_waypoints_backup.py  collect_waypoints_no_TF.py  fake_odom_publisher.py  full_pd_navigator.py  gazebo_to_pose_bridge.py  generate_dummy_waypoints.py  husky_controllerV2.py  husky_controllerV3_PD_ang.py  new_pd_nav.py  odom_navigation.py  optitrack_tf_broadcaster.py  optitrack_waypoint_navigator.py  optitrack_waypoint_navigator_backup.py  p_nav_with_odom_logs.py  p_navigator.py  pd_navigator.py  pid_navigator.py  pose_to_covariance_node.py  static_map_to_base.py  waypoint_visualizer.py
