<?xml version="1.0"?>
<package format="2">
  <name>husky_waypoint_nav</name>
  <version>0.1.0</version>
  <description>Waypoint-based autonomous navigation for Husky using OptiTrack or Gazebo simulation.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>joy</depend>
  <depend>roslib</depend>

  <!-- Exported tags -->
  <export>
  </export>
</package>
